--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
 VITE_FIREBASE_API_KEY="AIzaSyB8VtDMp4flClJPxMmrxE_c3s1iia_H4mE"
+VITE_REACT_APP_API_BASE_URL="https://mern-blog-cyan-seven.vercel.app"
