--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
 MONGO="mongodb+srv://haris2iftikhar:nRZxOcLQj8FXT8Ds@mern-blog.and5tih.mongodb.net/mern-blog?retryWrites=true&w=majority"
 
 JWT_SECRET="cleverly"
+
+REMOTE_CLIENT_URL="http://localhost:5173"
