backend API base url updated

--- a/server/.env
+++ b/server/.env
@@ -2,4 +2,5 @@ MONGO="mongodb+srv://haris2iftikhar:nRZxOcLQj8FXT8Ds@mern-blog.and5tih.mongodb.n
 
 JWT_SECRET="cleverly"
 
-REMOTE_CLIENT_URL="http://localhost:5173"
+# REMOTE_CLIENT_URL="http://localhost:5173"
+REMOTE_CLIENT_URL="https://mern-blog-frontend-steel-theta.vercel.app"
